Remove some projects

--- a/app/partials/_work.html
+++ b/app/partials/_work.html
@@ -148,15 +148,6 @@
       'https://www.npmjs.com/package/kaniku',
       'npm'
   ) }}
-
-  {{ item(
-      'Cocos starter kit',
-      ['open source', 'yeoman', 'cocos2d-x', 'coffeescript', 'gulp'],
-      ['oss', 'yeoman', 'cocos', 'coffee', 'gulp'],
-      'Boilerplate for cocos2d-x javascript games',
-      'https://github.com/reo7sp/cocos-starter-kit',
-      'GitHub'
-  ) }}
 </ul>
 
 <a name="work-webdev"></a>
@@ -172,8 +163,6 @@
       'gloria-nnov.ru'
   ) }}
 
-  <br>
-
   {{ item(
       'Thylogale',
       ['web app', 'open source', 'ruby', 'rails'],
@@ -182,20 +171,11 @@
       'https://github.com/reo7sp/thylogale',
       'GitHub'
   ) }}
-
-  {{ item(
-      'Reo web starter kit',
-      ['open source', 'yeoman', 'gulp'],
-      ['oss', 'yeoman', 'gulp'],
-      'Boilerplate for sites',
-      'https://github.com/reo7sp/reo-web-starter-kit',
-      'GitHub'
-  ) }}
 </ul>
 
 <a name="work-tools"></a>
 <a class="work-nav__up" href="#work">↑ up</a>
-<h3>Tools &amp; Misc</h3>
+<h3>Misc</h3>
 <ul class="work">
   {{ item(
       'tgbot-cpp',
@@ -210,105 +190,9 @@
       null,
       60
   ) }}
-
-  <br>
-
-  {{ item(
-      'coffeescript-accessors',
-      ['open source', 'coffeescript'],
-      ['oss', 'coffee'],
-      'Fancy getter and setter generation in CoffeeScript',
-      'https://github.com/reo7sp/coffeescript-accessors',
-      'GitHub',
-      'https://www.npmjs.com/package/coffeescript-accessors',
-      'npm'
-  ) }}
-
-  {{ item(
-      'BoardPP',
-      ['open source', 'scala', 'libgdx'],
-      ['oss', 'scala', 'libgdx'],
-      'Interactive virtual writing board',
-      'https://github.com/reo7sp/BoardPP',
-      'GitHub'
-  ) }}
-
-  {{ item(
-      'Socn',
-      ['open source', 'java'],
-      ['oss', 'java'],
-      'VK and Twitter desktop notifications',
-      'https://github.com/reo7sp/Socn',
-      'GitHub'
-  ) }}
-
-  {{ item(
-      'SBF Bukkit Plugin',
-      ['open source', 'java'],
-      ['oss', 'java'],
-      'SBF Minecraft server\'s plugin',
-      'https://github.com/reo7sp/SBF-Bukkit-Plugin',
-      'GitHub'
-  ) }}
-
-  {{ item(
-      'dokku-mariadb-sc',
-      ['open source', 'bash', 'dokku', 'docker'],
-      ['oss', 'bash', 'dokku', 'docker'],
-      'MariaDB in single container Dokku plugin',
-      'https://github.com/reo7sp/dokku-mariadb-sc',
-      'GitHub'
-  ) }}
-
-  {{ item(
-      'phabricator-docker',
-      ['open source', 'bash', 'docker'],
-      ['oss', 'bash', 'docker'],
-      'Docker image for Phabricator',
-      'https://github.com/reo7sp/phabricator-docker',
-      'GitHub'
-  ) }}
-
-  {{ item(
-      'ReoVimRC',
-      ['open source', 'vim'],
-      ['oss', 'vim'],
-      'Vim config',
-      'https://github.com/reo7sp/ReoVimRC',
-      'GitHub'
-  ) }}
-
-  <br>
-
-  {{ item(
-      'GoToHack test task',
-      ['open source', 'scala'],
-      ['oss', 'scala'],
-      'Test task for GoToHack Big Data hackathon',
-      'https://github.com/reo7sp/GoToHack-TestTask',
-      'GitHub'
-  ) }}
-
-  {{ item(
-      'GoToHack2 test task',
-      ['open source', 'python', 'kaggle'],
-      ['oss', 'python', 'employment'],
-      'Test task for GoToHack2 Data Science hackathon',
-      'https://github.com/reo7sp/GoToHack2-TestTask',
-      'GitHub'
-  ) }}
-
-  {{ item(
-      'GoTo ML 2016 test task',
-      ['open source', 'recommendation system', 'python', 'svd'],
-      ['oss', 'science', 'python', 'science'],
-      'Test task for GoTo Machine Learning school in summer 2016',
-      'https://github.com/reo7sp/GoToS2016-TestTask',
-      'GitHub'
-  ) }}
 </ul>
 
-<p>
+<p style="margin-top: 48px">
   <img class="contacts-links__icon" src="images/icons/github.png" alt="GitHub">
   <a class="contacts-links__link" target="_blank" href="https://github.com/reo7sp?tab=repositories">See full list of my open source projects on GitHub</a>
 </p>
@@ -317,8 +201,8 @@
   <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=java">Java</a>,
   <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=c%2B%2B">C++</a>,
   <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=scala">Scala</a>,
-  <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=shell">Bash</a>,
-  <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=coffeescript">CoffeeScript</a>
+  <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=coffeescript">CoffeeScript</a>,
+  <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=jupyter%20notebook">Jupyter Notebook</a>
 </p>
 
 <a class="work-nav__up-from-bottom" href="#work">↑ up</a>
