--- a/app/templates/_base.html
+++ b/app/templates/_base.html
@@ -9,7 +9,7 @@
     <script src="scripts/app.js" defer></script>
 
     <title>{% block title %}{% endblock %}</title>
-    <meta name="description" content="25 projects in Data Science, Gamedev and Web are featured on this portfolio site"> 
+    <meta name="description" content="I'm keen on Data science, Game development and Web"> 
 
     {% block head %}{% endblock %}
   </head>
