--- a/app/partials/_education.html
+++ b/app/partials/_education.html
@@ -4,6 +4,9 @@
   <li class="education-item">
     <p class="education-item__text">2016–2020: <strong>Bauman Moscow State Technical University</strong></p>
   </li>
+  <li class="education-item">
+    <p class="education-item__text">2017–2018: <strong>Technopark Mail.Ru</strong></p>
+  </li>
 </ul>
 
 <h2>Additional courses</h2>
