Fix github footer

--- a/app/partials/_work.html
+++ b/app/partials/_work.html
@@ -192,17 +192,19 @@
   ) }}
 </ul>
 
-<p style="margin-top: 48px">
-  <img class="contacts-links__icon" src="images/icons/github.png" alt="GitHub">
-  <a class="contacts-links__link" target="_blank" href="https://github.com/reo7sp?tab=repositories">See full list of my open source projects on GitHub</a>
-</p>
-<p style="margin-left: 36px">
-  By language: 
-  <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=java">Java</a>,
-  <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=c%2B%2B">C++</a>,
-  <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=scala">Scala</a>,
-  <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=coffeescript">CoffeeScript</a>,
-  <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=jupyter%20notebook">Jupyter Notebook</a>
-</p>
+<div class="github-footer">
+  <p class="github-footer__first">
+    <img class="contacts-links__icon" src="images/icons/github.png" alt="GitHub">
+    <a class="contacts-links__link" target="_blank" href="https://github.com/reo7sp?tab=repositories">See full list of my open source projects on GitHub</a>
+  </p>
+  <p class="github-footer__second">
+    By language:
+    <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=java">Java</a>,
+    <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=c%2B%2B">C++</a>,
+    <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=scala">Scala</a>,
+    <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=coffeescript">CoffeeScript</a>,
+    <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=jupyter%20notebook">Jupyter Notebook</a>
+  </p>
+</div>
 
 <a class="work-nav__up-from-bottom" href="#work">↑ up</a>
