--- a/app/partials/_education.html
+++ b/app/partials/_education.html
@@ -12,7 +12,7 @@
 <h2>Additional courses</h2>
 <ul>
   <li class="education-item">
-    <p class="education-item__text"><strong>Introduction to machine learning</strong> from the University Higher School of Economics on Coursera</p>
-    <p><a href="https://www.coursera.org/account/accomplishments/verify/NANEYSFHTVTZ" target="_blank">Coursera course certificate</a></p>
+    <p class="education-item__text"><strong>Introduction to machine learning</strong> / University Higher School of Economics</p>
+    <p><a href="https://www.coursera.org/account/accomplishments/verify/NANEYSFHTVTZ" target="_blank">Coursera certificate</a></p>
   </li>
 </ul>
