--- a/app/partials/_work.html
+++ b/app/partials/_work.html
@@ -42,9 +42,9 @@
 <ul class="work">
   {{ item(
       'Voice to vector',
-      ['neural networks', 'open source', 'python', 'theano', 'lasagne'],
-      ['science', 'oss', 'python', 'python', 'python'],
-      'Transforms voices to vectors so you can compare them',
+      ['neural networks', 'voice processing', 'python', 'theano', 'lasagne'],
+      ['science', 'science', 'python', 'python', 'python'],
+      'Transforming voices to vectors so they be comparable',
       'https://github.com/xenx/speech',
       'GitHub',
       'http://www.slideshare.net/OlegMorozenkov/speechlock-voice-to-vector-voice-similarity',
@@ -53,9 +53,9 @@
 
   {{ item(
       'Face3dMatch',
-      ['computer vision', 'open source', 'scala', 'android'],
-      ['science', 'oss', 'scala', 'android'],
-      'Android app which authorizes user using 3d model of the face',
+      ['computer vision', '3d reconstruction', 'scala', 'android'],
+      ['science', 'science', 'scala', 'android'],
+      'Authorization using a 3d model of the face',
       'https://github.com/reo7sp/Face3dMatch',
       'GitHub'
   ) }}
@@ -64,9 +64,9 @@
 
   {{ item(
       'GoToHack2\'s project',
-      ['hackathon', 'natural text processing', 'open source', 'python', 'lda'],
-      ['employment', 'science', 'oss', 'python', 'science'],
-      'We worked on case by MTS company: prediction of post popularity in VK group of TalentEdme project',
+      ['hackathon', 'natural text processing', 'python'],
+      ['employment', 'science', 'python'],
+      'Case by MTS company: prediction of post popularity in VK group of TalentEdme project',
       'http://www.slideshare.net/OlegMorozenkov/gotohack2-data-science-hackathon',
       'SlideShare',
       'https://github.com/reo7sp/GoToHack2',
@@ -79,27 +79,27 @@
 
   {{ item(
       'WaveFourierTransformTest',
-      ['physics', 'open source', 'scala'],
-      ['science', 'oss', 'scala'],
-      'Researching fourier transform of a wave moving in time',
+      ['physics',  'scala'],
+      ['science',  'scala'],
+      'Fourier transform of a wave moving in time research',
       'https://github.com/reo7sp/FourierTransformTest',
       'GitHub'
   ) }}
 
   {{ item(
       'WaveTest',
-      ['physics', 'open source', 'scala'],
-      ['science', 'oss', 'scala'],
-      'Researching a bunch of monochromatic waves moving in time',
+      ['physics',  'scala'],
+      ['science',  'scala'],
+      'Monochromatic waves moving in time research',
       'https://github.com/reo7sp/WaveTest',
       'GitHub'
   ) }}
 
   {{ item(
       'MagneticTest',
-      ['physics', 'open source', 'c', 'opengl'],
-      ['science', 'oss', 'cpp', 'opengl'],
-      'Researching magnetic field',
+      ['physics',  'c', 'opengl'],
+      ['science',  'cpp', 'opengl'],
+      'Magnetic field research',
       'https://github.com/reo7sp/MagneticTest',
       'GitHub'
   ) }}
@@ -107,13 +107,13 @@
 
 <a name="work-gamedev"></a>
 <a class="work-nav__up" href="#work">↑ up</a>
-<h3>Game development</h3>
+<h3>Gamedev</h3>
 <ul class="work">
   {{ item(
       'Raycord Legends',
       ['worked 2014–2015', 'game', 'unity3d', 'uframe', 'spine'],
       ['employment', 'game', 'unity', 'unity', 'unity'],
-      'My Little Pony and Rayman Legends crossover game. Features cool graphics',
+      'Rayman Legends and My Little Pony crossover game. Features cool graphics',
       'http://raycordlegends.com',
       'raycordlegends.com',
       'https://youtu.be/8B8y9jDU9Jw',
@@ -140,8 +140,8 @@
 
   {{ item(
       'Kaniku',
-      ['open source', 'cocos2d-x', 'coffeescript'],
-      ['oss', 'cocos', 'coffee'],
+      ['cocos2d-x', 'coffeescript'],
+      ['cocos', 'coffee'],
       'MVC microframework for cocos2d-x javascript games',
       'https://github.com/reo7sp/kaniku',
       'GitHub',
@@ -152,7 +152,7 @@
 
 <a name="work-webdev"></a>
 <a class="work-nav__up" href="#work">↑ up</a>
-<h3>Web development</h3>
+<h3>Web</h3>
 <ul class="work">
   {{ item(
       'ATK Gloria',
@@ -165,8 +165,8 @@
 
   {{ item(
       'Thylogale',
-      ['web app', 'open source', 'ruby', 'rails'],
-      ['webapp', 'oss', 'ruby', 'rails'],
+      ['web app',  'ruby', 'rails'],
+      ['webapp',  'ruby', 'rails'],
       'Content management system for static sites',
       'https://github.com/reo7sp/thylogale',
       'GitHub'
@@ -179,8 +179,8 @@
 <ul class="work">
   {{ item(
       'tgbot-cpp',
-      ['open source', 'c++', 'boost', 'boost asio'],
-      ['oss', 'cpp', 'cpp', 'cpp'],
+      ['c++', 'boost', 'boost asio'],
+      ['cpp', 'cpp', 'cpp'],
       'C++ library for Telegram bot API',
       'https://github.com/reo7sp/tgbot-cpp',
       'GitHub',
@@ -195,14 +195,14 @@
 <div class="github-footer">
   <p class="github-footer__first">
     <img class="contacts-links__icon" src="images/icons/github.png" alt="GitHub">
-    <a class="contacts-links__link" target="_blank" href="https://github.com/reo7sp?tab=repositories">See full list of my open source projects on GitHub</a>
+    <a class="contacts-links__link" target="_blank" href="https://github.com/reo7sp">See my open source projects on GitHub →</a>
   </p>
   <p class="github-footer__second">
     By language:
-    <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=java">Java</a>,
-    <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=c%2B%2B">C++</a>,
-    <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=scala">Scala</a>,
-    <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=coffeescript">CoffeeScript</a>,
+    <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=java">Java</a><b>,</b>
+    <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=c%2B%2B">C++</a><b>,</b>
+    <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=scala">Scala</a><b>,</b>
+    <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=coffeescript">CoffeeScript</a><b>,</b>
     <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=jupyter%20notebook">Jupyter Notebook</a>
   </p>
 </div>
