--- a/app/styles/work.sass
+++ b/app/styles/work.sass
@@ -50,13 +50,16 @@
     padding: 3px 9px
 
     &_employment
-      color: #bf4040
+      color: #9c27b0
+      font-style: oblique
     &_science
-      color: #9d65ff
+      color: #ff5722
+      font-style: oblique
     &_oss
       color: #ffbb79
     &_game
-      color: #9d65ff
+      color: #ff5722
+      font-style: oblique
     &_unity
       color: #00b37d
     &_cocos
@@ -72,9 +75,11 @@
     &_python
       color: #3c89c3
     &_site
-      color: #9d65ff
+      color: #ff5722
+      font-style: oblique
     &_webapp
-      color: #9d65ff
+      color: #ff5722
+      font-style: oblique
     &_android
       color: #39b135
     &_scala
