--- a/app/partials/_contacts.html
+++ b/app/partials/_contacts.html
@@ -8,6 +8,10 @@
     <a class="contacts-links__link" target="_blank" href="https://www.linkedin.com/in/reo7sp">LinkedIn</a>
   </li>
   <li class="contacts-links__item">
+    <img class="contacts-links__icon" src="images/icons/vk.png" alt="VK">
+    <a class="contacts-links__link" target="_blank" href="https://vk.com/reo7sp">VK</a>
+  </li>
+  <li class="contacts-links__item">
     <img class="contacts-links__icon" src="images/icons/telegram.png" alt="Telegram">
     <a class="contacts-links__link" target="_blank" href="https://t.me/reo7sp">Telegram</a>
   </li>
