--- a/app/partials/_education.html
+++ b/app/partials/_education.html
@@ -2,10 +2,12 @@
 
 <ul>
   <li class="education-item">
-    <p class="education-item__text">2016–2020: <strong>Bauman Moscow State Technical University</strong></p>
+    <p class="education-item__text"><strong>Bauman Moscow State Technical University</strong></p>
+    <p class="education-item__additional-text">2016–2020, Bachelor of Engineering</p>
   </li>
   <li class="education-item">
-    <p class="education-item__text">2017–2018: <strong>Technopark Mail.Ru</strong></p>
+    <p class="education-item__text"><strong>Technopark Mail.Ru</strong></p>
+    <p class="education-item__additional-text">2017–2018, Software Architect</p>
   </li>
 </ul>
 
@@ -13,6 +15,6 @@
 <ul>
   <li class="education-item">
     <p class="education-item__text"><strong>Introduction to machine learning</strong> / University Higher School of Economics</p>
-    <p><a href="https://www.coursera.org/account/accomplishments/verify/NANEYSFHTVTZ" target="_blank">Coursera certificate</a></p>
+    <p class="education-item__additional-text"><a href="https://www.coursera.org/account/accomplishments/certificate/NANEYSFHTVTZ" target="_blank">Coursera certificate</a></p>
   </li>
 </ul>
