--- a/app/partials/_work.html
+++ b/app/partials/_work.html
@@ -64,8 +64,8 @@
 
   {{ item(
       'GoToHack2\'s project',
-      ['hackathon', 'natural text processing', 'python'],
-      ['employment', 'science', 'python'],
+      ['hackathon', 'natural text processing', 'python', 'vk-api'],
+      ['employment', 'science', 'python', 'vk'],
       'Case by MTS company: prediction of post popularity in VK group of TalentEdme project',
       'https://github.com/reo7sp/vk-text-likeness',
       'GitHub',
@@ -179,8 +179,8 @@
 <ul class="work">
   {{ item(
       'tgbot-cpp',
-      ['c++', 'boost', 'boost asio'],
-      ['cpp', 'cpp', 'cpp'],
+      ['c++', 'boost', 'boost asio', 'telegram-api'],
+      ['cpp', 'cpp', 'cpp', 'telegram'],
       'C++ library for Telegram bot API',
       'https://github.com/reo7sp/tgbot-cpp',
       'GitHub',
@@ -189,6 +189,15 @@
       null,
       null,
       85
+  ) }}
+
+  {{ item(
+      'VK Channelify',
+      ['python', 'telegram-api', 'vk-api'],
+      ['python', 'telegram', 'vk'],
+      'Create Telegram channel from VK group',
+      'https://github.com/reo7sp/vk-channelify',
+      'GitHub'
   ) }}
 </ul>
 
