--- a/app/styles/work.sass
+++ b/app/styles/work.sass
@@ -108,6 +108,10 @@
       color: #873f12
     &_vim
       color: #00a94c
+    &_telegram
+      color: #3c89c3
+    &_vk
+      color: #3c89c3
 
 .work-nav
   &__gotos
