--- a/app/partials/_work.html
+++ b/app/partials/_work.html
@@ -32,9 +32,9 @@
 <a name="work"></a>
 <h2>My portfolio</h2>
 
-<div class="work-nav__gotos">
-  <a class="work-nav__goto" href="#work-gamedev">↓ go to gamedev</a>
-  <a class="work-nav__goto" href="#work-webdev">↓ go to web</a>
+<div class="work-nav-gotos">
+  <a class="work-nav-gotos__item" href="#work-gamedev">↓ go to gamedev</a>
+  <a class="work-nav-gotos__item" href="#work-webdev">↓ go to web</a>
 </div>
 
 <a name="work-science"></a>
@@ -47,7 +47,7 @@
       'Transforming voices to vectors so they be comparable',
       'https://github.com/xenx/speech',
       'GitHub',
-      'http://www.slideshare.net/OlegMorozenkov/speechlock-voice-to-vector-voice-similarity',
+      'https://www.slideshare.net/OlegMorozenkov/speechlock-voice-to-vector-voice-similarity',
       'SlideShare'
   ) }}
 
@@ -69,7 +69,7 @@
       'Case by MTS company: prediction of post popularity in VK group of TalentEdme project',
       'https://github.com/reo7sp/vk-text-likeness',
       'GitHub',
-      'http://www.slideshare.net/OlegMorozenkov/gotohack2-data-science-hackathon',
+      'https://www.slideshare.net/OlegMorozenkov/gotohack2-data-science-hackathon',
       'SlideShare',
       'images/certificates/gotohack2.jpg',
       'Winner certificate'
@@ -106,7 +106,7 @@
 </ul>
 
 <a name="work-gamedev"></a>
-<a class="work-nav__up" href="#work">↑ up</a>
+<a class="work-nav-up" href="#work">↑ up</a>
 <h3>Gamedev</h3>
 <ul class="work">
   {{ item(
@@ -114,7 +114,7 @@
       ['worked 2014–2015', 'game', 'unity3d', 'uframe', 'spine'],
       ['employment', 'game', 'unity', 'unity', 'unity'],
       'Rayman Legends and My Little Pony crossover game. Features cool graphics',
-      'http://raycordlegends.com',
+      'https://raycordlegends.com',
       'raycordlegends.com',
       'https://youtu.be/8B8y9jDU9Jw',
       'YouTube'
@@ -151,7 +151,7 @@
 </ul>
 
 <a name="work-webdev"></a>
-<a class="work-nav__up" href="#work">↑ up</a>
+<a class="work-nav-up" href="#work">↑ up</a>
 <h3>Web</h3>
 <ul class="work">
   {{ item(
@@ -159,7 +159,7 @@
       ['working since 2013', 'website', 'ruby'],
       ['employment', 'site', 'ruby'],
       'Website of travel company in Nizhny Novgorod',
-      'http://gloria-nnov.ru',
+      'https://gloria-nnov.ru',
       'gloria-nnov.ru'
   ) }}
 
@@ -174,7 +174,7 @@
 </ul>
 
 <a name="work-tools"></a>
-<a class="work-nav__up" href="#work">↑ up</a>
+<a class="work-nav-up" href="#work">↑ up</a>
 <h3>Misc</h3>
 <ul class="work">
   {{ item(
@@ -216,4 +216,4 @@
   </p>
 </div>
 
-<a class="work-nav__up-from-bottom" href="#work">↑ up</a>
+<a class="work-nav-up-from-bottom" href="#work">↑ up</a>
