--- a/app/styles/giraffe-background.sass
+++ b/app/styles/giraffe-background.sass
@@ -1,4 +1,7 @@
 .giraffe-background
+  @media print
+    display: none
+
   &_giraffe
     position: fixed
     bottom: 0
@@ -54,3 +57,7 @@
     width: 100%
     height: auto
 
+
+.giraffe-background-notice
+  @media print
+    display: none
