--- a/app/styles/work.sass
+++ b/app/styles/work.sass
@@ -24,6 +24,9 @@
     margin-left: 12px
     cursor: pointer
 
+    @media print
+      display: block
+
     &--third
       @media (max-width: 992px)
         display: block
@@ -113,15 +116,17 @@
     &_vk
       color: #3c89c3
 
-.work-nav
-  &__gotos
-    display: table
-    width: 100%
+.work-nav-gotos
+  display: table
+  width: 100%
 
-    @media (min-width: 992px)
-      display: none
+  @media print
+    display: none
 
-  &__goto
+  @media (min-width: 992px)
+    display: none
+
+  &__item
     display: table-cell
     width: 50%
     text-align: center
@@ -129,15 +134,21 @@
     @media (min-width: 992px)
       display: none
 
-  &__up
-    float: right
+.work-nav-up
+  float: right
 
-    @media (min-width: 992px)
-      display: none
+  @media print
+    display: none
 
-  &__up-from-bottom
-    display: inline-block
-    margin-top: 20px
+  @media (min-width: 992px)
+    display: none
 
-    @media (min-width: 992px)
-      display: none
+.work-nav-up-from-bottom
+  display: inline-block
+  margin-top: 20px
+
+  @media print
+    display: none
+
+  @media (min-width: 992px)
+    display: none
