--- a/app/partials/_work.html
+++ b/app/partials/_work.html
@@ -44,18 +44,20 @@
       'Voice to vector',
       ['neural networks', 'voice processing', 'python', 'theano', 'lasagne'],
       ['science', 'science', 'python', 'python', 'python'],
-      'Transforming voices to vectors so they be comparable',
+      'Making voices comparable',
       'https://github.com/xenx/speech',
       'GitHub',
       'https://www.slideshare.net/OlegMorozenkov/speechlock-voice-to-vector-voice-similarity',
       'SlideShare'
   ) }}
 
+  <br>
+
   {{ item(
       'Face3dMatch',
       ['computer vision', '3d reconstruction', 'scala', 'android'],
       ['science', 'science', 'scala', 'android'],
-      'Authorization using a 3d model of the face',
+      'Sign in via a 3d model of the face',
       'https://github.com/reo7sp/Face3dMatch',
       'GitHub'
   ) }}
@@ -63,7 +65,7 @@
   <br>
 
   {{ item(
-      'GoToHack2\'s project',
+      'GoToHack2 + MTS',
       ['hackathon', 'natural text processing', 'python', 'vk-api'],
       ['employment', 'science', 'python', 'vk'],
       'Case by MTS company: prediction of post popularity in VK group of TalentEdme project',
@@ -78,10 +80,21 @@
   <br>
 
   {{ item(
+      'Movie recommender system',
+      ['recommender system', 'python'],
+      ['science', 'python'],
+      'Test task for GoTo Machine Learning school in summer 2016',
+      'https://github.com/reo7sp/GoToSchool2016-TestTask',
+      'GitHub'
+  ) }}
+
+  <br>
+
+  {{ item(
       'WaveFourierTransformTest',
       ['physics',  'scala'],
       ['science',  'scala'],
-      'Fourier transform of a wave moving in time research',
+      'Fourier transform of a wave moving in time',
       'https://github.com/reo7sp/FourierTransformTest',
       'GitHub'
   ) }}
@@ -90,7 +103,7 @@
       'WaveTest',
       ['physics',  'scala'],
       ['science',  'scala'],
-      'Monochromatic waves moving in time research',
+      'Monochromatic waves moving in time',
       'https://github.com/reo7sp/WaveTest',
       'GitHub'
   ) }}
@@ -188,7 +201,7 @@
       null,
       null,
       null,
-      85
+      90
   ) }}
 
   {{ item(
