--- a/app/styles/work.sass
+++ b/app/styles/work.sass
@@ -56,12 +56,12 @@
       color: #9c27b0
       font-style: oblique
     &_science
-      color: #ff5722
+      color: #e04c1e
       font-style: oblique
     &_oss
       color: #ffbb79
     &_game
-      color: #ff5722
+      color: #e04c1e
       font-style: oblique
     &_unity
       color: #00b37d
@@ -78,10 +78,10 @@
     &_python
       color: #3c89c3
     &_site
-      color: #ff5722
+      color: #e04c1e
       font-style: oblique
     &_webapp
-      color: #ff5722
+      color: #e04c1e
       font-style: oblique
     &_android
       color: #39b135
