--- a/app/styles/work.sass
+++ b/app/styles/work.sass
@@ -115,6 +115,12 @@
       color: #3c89c3
     &_vk
       color: #3c89c3
+    &_lib
+      color: #e04c1e
+      font-style: oblique
+    &_bot
+      color: #e04c1e
+      font-style: oblique
 
 .work-nav-gotos
   display: table
