--- a/app/partials/_work.html
+++ b/app/partials/_work.html
@@ -153,13 +153,15 @@
 
   {{ item(
       'Kaniku',
-      ['cocos2d-x', 'coffeescript'],
-      ['cocos', 'coffee'],
+      ['framework', 'cocos2d-x', 'coffeescript'],
+      ['lib', 'cocos', 'coffee'],
       'MVC microframework for cocos2d-x javascript games',
       'https://github.com/reo7sp/kaniku',
       'GitHub',
       'https://www.npmjs.com/package/kaniku',
-      'npm'
+      'npm',
+      'https://github.com/reo7sp/cocos-starter-kit',
+      'Starter kit'
   ) }}
 </ul>
 
@@ -192,8 +194,8 @@
 <ul class="work">
   {{ item(
       'tgbot-cpp',
-      ['c++', 'boost', 'boost asio', 'telegram-api'],
-      ['cpp', 'cpp', 'cpp', 'telegram'],
+      ['library', 'c++', 'boost', 'boost asio', 'telegram-api'],
+      ['lib', 'cpp', 'cpp', 'cpp', 'telegram'],
       'C++ library for Telegram bot API',
       'https://github.com/reo7sp/tgbot-cpp',
       'GitHub',
@@ -206,11 +208,13 @@
 
   {{ item(
       'VK Channelify',
-      ['python', 'telegram-api', 'vk-api'],
-      ['python', 'telegram', 'vk'],
+      ['bot', 'python', 'telegram-api', 'vk-api'],
+      ['bot', 'python', 'telegram', 'vk'],
       'Create Telegram channel from VK group',
       'https://github.com/reo7sp/vk-channelify',
-      'GitHub'
+      'GitHub',
+      'https://t.me/vk_channelify_bot',
+      '@vk_channelify_bot'
   ) }}
 </ul>
 
