Printable header site link

--- a/app/styles/printable-links.sass
+++ b/app/styles/printable-links.sass
@@ -1,7 +1,7 @@
 .printable-link
   @media screen
-    display: none
+    display: none !important
 
 .not-printable-link
   @media print
-    display: none
+    display: none !important
