--- a/app/styles/container.sass
+++ b/app/styles/container.sass
@@ -1,6 +1,9 @@
 .container
-  padding: 32px 32px
+  padding: 16px
   flex: 1
+
+  @media (min-width: 640px) and (max-width: 992px)
+    padding: 32px
 
   @media (min-width: 992px)
     padding: 32px 64px
