--- a/app/partials/_work.html
+++ b/app/partials/_work.html
@@ -227,8 +227,8 @@
     By language:
     <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=java">Java</a><b>,</b>
     <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=c%2B%2B">C++</a><b>,</b>
-    <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=scala">Scala</a><b>,</b>
-    <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=coffeescript">CoffeeScript</a><b>,</b>
+    <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=go">Go</a><b>,</b>
+    <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=python">Python</a><b>,</b>
     <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=jupyter%20notebook">Jupyter Notebook</a>
   </p>
 </div>
