--- a/app/partials/_education.html
+++ b/app/partials/_education.html
@@ -1,20 +1,20 @@
-<h2>Education</h2>
+<h2>{{ i18n.education }}</h2>
 
 <ul>
   <li class="education-item">
-    <p class="education-item__text"><strong>Bauman Moscow State Technical University</strong></p>
-    <p class="education-item__additional-text">2016–2020, Bachelor of Engineering</p>
+    <p class="education-item__text"><strong>{{ i18n.bauman }}</strong></p>
+    <p class="education-item__additional-text">{{ i18n.baumanSpec }}</p>
   </li>
   <li class="education-item">
-    <p class="education-item__text"><strong>Technopark Mail.Ru</strong></p>
-    <p class="education-item__additional-text">2017–2018, Software Architect</p>
+    <p class="education-item__text"><strong>{{ i18n.technopark }}</strong></p>
+    <p class="education-item__additional-text">{{ i18n.technoparkSpec }}</p>
   </li>
 </ul>
 
-<h2>Additional courses</h2>
+<h2>{{ i18n.additionalCourses }}</h2>
 <ul>
   <li class="education-item">
-    <p class="education-item__text"><strong>Introduction to machine learning</strong> / University Higher School of Economics</p>
-    <p class="education-item__additional-text"><a href="https://www.coursera.org/account/accomplishments/certificate/NANEYSFHTVTZ" target="_blank">Coursera certificate</a></p>
+    <p class="education-item__text"><strong>{{ i18n.introToMl }}</strong> / {{ i18n.introToMlSpec }}</p>
+    <p class="education-item__additional-text"><a href="https://www.coursera.org/account/accomplishments/certificate/NANEYSFHTVTZ" target="_blank">{{ i18n.courseraCertificate }}</a></p>
   </li>
 </ul>
