--- a/app/partials/_work.html
+++ b/app/partials/_work.html
@@ -33,12 +33,12 @@
 <h2>{{ i18n.myPortfolio }}</h2>
 
 <div class="work-nav-gotos">
-  <a class="work-nav-gotos__item" href="#work-gamedev">↓ {{ i18n.goToGitHub }}</a>
+  <a class="work-nav-gotos__item" href="#work-gamedev">↓ {{ i18n.goToGamedev }}</a>
   <a class="work-nav-gotos__item" href="#work-webdev">↓ {{ i18n.goToWeb }}</a>
 </div>
 
 <a name="work-science"></a>
-<h3>{{ i18n.science }}</h3>
+<h3>{{ i18n.dataScience }}</h3>
 <ul class="work">
   {{ item(
       i18n.voiceToVector,
@@ -69,7 +69,7 @@
       i18n.github,
       'https://www.slideshare.net/OlegMorozenkov/gotohack2-data-science-hackathon',
       i18n.slideshare,
-      'images/certificates/gotohack2.jpg',
+      'images/certificates/gotohack2-win.jpg',
       i18n.winnerCertificate
   ) }}
 
@@ -92,8 +92,8 @@
       [i18n.worked + ' 2014–2015', i18n.game, i18n.unity3d, i18n.uframe, i18n.spine],
       ['employment', 'game', 'unity', 'unity', 'unity'],
       i18n.raycordDesc,
-      'https://raycordlegends.com',
-      'raycordlegends.com',
+      'https://vk.com/discord_replies',
+      i18n.vk,
       'https://youtu.be/8B8y9jDU9Jw',
       i18n.youTube
   ) }}
@@ -104,7 +104,7 @@
       ['employment', 'game', 'unity', 'steam'],
       i18n.mars2000Desc,
       'https://vk.com/mars_2k',
-      vk
+      i18n.vk
   ) }}
 
   {{ item(
@@ -192,8 +192,8 @@
     {{ i18n.byLang }}:
     <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=java">Java</a><b>,</b>
     <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=c%2B%2B">C++</a><b>,</b>
+    <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=scala">Scala</a><b>,</b>
     <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=go">Go</a><b>,</b>
-    <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=python">Python</a><b>,</b>
     <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=jupyter%20notebook">Jupyter Notebook</a>
   </p>
 </div>
