--- a/app/partials/i18n/_en.html
+++ b/app/partials/i18n/_en.html
@@ -44,11 +44,11 @@
 
 {# Portfolio controls #}
 {% set myPortfolio = "My portfolio" %}
-{% set science = "Science" %}
+{% set dataScience = "Data Science" %}
 {% set gamedev = "Gamedev" %}
 {% set web = "Web" %}
 {% set misc = "Misc" %}
-{% set goToGitHub = "go to github" %}
+{% set goToGamedev = "go to gamedev" %}
 {% set goToWeb = "go to web" %}
 {% set github = "GitHub" %}
 {% set slideshare = "SlideShare" %}
@@ -63,7 +63,7 @@
 {% set android = "android" %}
 {% set hackathon = "hackathon" %}
 {% set naturalTextProcessing = "natural text processing" %}
-{% set vkApi = "vk-api" %}
+{% set vkApi = "vk api" %}
 {% set winnerCertificate = "Winner certificate" %}
 {% set recommenderSystem = "recommender system" %}
 {% set worked = "worked" %}
