--- a/app/partials/i18n/_ru.html
+++ b/app/partials/i18n/_ru.html
@@ -91,7 +91,7 @@
 {% set boost = "boost" %}
 {% set boostAsio = "boost asio" %}
 {% set telegramApi = "telegram api" %}
-{% set bot = "bot" %}
+{% set bot = "бот" %}
 {% set seeGitHub = "Посмотреть опенсорс на Гитхабе" %}
 {% set byLang = "По языкам" %}
 {% set up = "наверх" %}
